feat: upgrade to java 17 spring boot 3.0 and hibernate 6, version reimplementing agency search from hibernate search to criteria